# Imager.TiffLib

./: .gitmodules  LICENSE  README  README.md  meson.build  meson.options  meson_igor.build
VS2017/: MeasurementImageStorage.sln  MeasurementImageStorage.vcxproj
resources/: MeasurementImageStorage.rc  MeasurementImageStorageWinCustom.rc  meson.build  resource.h
src/: BasicTIFFWriter.cpp  BasicTIFFWriter.h  Doxyfile  FileLoaderClass.cpp  FileLoaderClass.h  FileStorageClass.cpp  FileStorageClass.h  IgorUtils.cpp  IgorUtils.h  ImagerProgramInterpreter.cpp  ImagerProgramInterpreter.h  MeasurementImageStorageDLL.cpp  MeasurementImageStorageDLL.h  MeasurementImagesMain.cpp  MiscUtils.cpp  MiscUtils.h  StorageWrapperClass.cpp  StorageWrapperClass.h  meson.build
src/docs/html/: _measurement_image_storage_d_l_l_8h.html  _measurement_image_storage_d_l_l_8h_source.html  doxygen_crawl.html  files.html  globals.html  globals_defs.html  globals_func.html  index.html
src/docs/html/search/: all_1.js  defines_0.js  files_0.js  functions_0.js
subprojects/: lnbtiff.wrap
subprojects/lnbtiff/: TIFFCompression.cpp  TIFFDefs.h  TIFFFile.cpp  TIFFIFD.cpp  TIFFUtils.cpp  TIFFUtils.h  TIFFWriter.cpp  TIFFWriter.h  meson.build
subprojects/lnbtiff/zlib/: meson.build
