MIMSources = files(
    'BasicTIFFWriter.cpp',
    'FileLoaderClass.cpp',
    'FileStorageClass.cpp',
    'ImagerProgramInterpreter.cpp',
    'MiscUtils.cpp',
    'StorageWrapperClass.cpp',
    'tinyxml2.cpp',
)

igor_sources = files(
    'MeasurementImagesMain.cpp',
    'IgorUtils.cpp',
)
